[package]
name = "nc_prometheus_exporter"
version = "1.0.0"
authors = ["Johannes Groß"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
confy = "*"
reqwest = { version = "*", features = ["blocking"] }
quick-xml = "*"
rocket = "*"
md5 = "*"
hex = "*"
log = "0.4"
fern = "*"
chrono = "*"