[package]
name = "nc_prometheus_exporter"
version = "1.1.1"
authors = ["jo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
confy = "*"
reqwest = { version = "*", features = ["blocking", "rustls-tls", "cookies"] }
quick-xml = "*"
rocket = "*"
md5 = "*"
hex = "*"
log = "0.4"
fern = "*"
chrono = "*"